include Fraise_abs, rm useless README, explain in HELP.txt how to build bootselBoot

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,7 +76,7 @@ if(NOT DEFINED PORT_DIR)
     message(STATUS "PORT_DIR = ${PORT_DIR}")
 endif()
 
-# Hardware-specific examples in subdirectories:
+# Application subdirectory
 add_subdirectory(src)
 
 # Add libraries in subdirectories
